add ICE restart

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
         <button id="startBtnEl" onclick="onStart()" disabled>Start</button>
         <br/>
         <button id="hangUpBtnEl" onclick="onHangUp()" disabled>Hang Up</button>
+        <br>
+        <button id="closeMyCallEl" onclick="onCloseMyCall()">Close my call</button>
     </div>
 
     <div id="videoContainerEl">
